vlib/v/checker/tests/optional_fn_err.out
vlib/v/checker/tests/optional_fn_err.vv:13:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   11 | 
   12 | const (
   13 |     const_value = bar(0)
      |                   ~~~~~~
   14 | )
   15 |
vlib/v/checker/tests/optional_fn_err.vv:19:14: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   17 |     f fn (int)
   18 | mut:
   19 |     value int = bar(0)
      |                 ~~~~~~
   20 | }
   21 |
vlib/v/checker/tests/optional_fn_err.vv:32:2: error: foo() returns an option, so it should have either an `or {}` block, or `?` at the end
   30 | fn main() {
   31 |     // call fn
   32 |     foo()
      |     ~~~~~
   33 |     _ := bar(0)
   34 |     println(twice(bar(0)))
vlib/v/checker/tests/optional_fn_err.vv:33:7: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   31 |     // call fn
   32 |     foo()
   33 |     _ := bar(0)
      |          ~~~~~~
   34 |     println(twice(bar(0)))
   35 |
vlib/v/checker/tests/optional_fn_err.vv:34:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   32 |     foo()
   33 |     _ := bar(0)
   34 |     println(twice(bar(0)))
      |                   ~~~~~~
   35 | 
   36 |     // anon fn
vlib/v/checker/tests/optional_fn_err.vv:37:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   35 | 
   36 |     // anon fn
   37 |     fn (_ int) {}(bar(0))
      |                   ~~~~~~
   38 | 
   39 |     // assert
vlib/v/checker/tests/optional_fn_err.vv:40:9: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   38 | 
   39 |     // assert
   40 |     assert bar(true)
      |            ~~~~~~~~~
   41 | 
   42 |     // struct
vlib/v/checker/tests/optional_fn_err.vv:45:10: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   43 |     mut v := Data{
   44 |         f: fn (_ int) {},
   45 |         value: bar(0),
      |                ~~~~~~
   46 |     }
   47 |     v.add(bar(0)) // call method
vlib/v/checker/tests/optional_fn_err.vv:47:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   45 |         value: bar(0),
   46 |     }
   47 |     v.add(bar(0)) // call method
      |           ~~~~~~
   48 |     v.f(bar(0)) // call fn field
   49 |
vlib/v/checker/tests/optional_fn_err.vv:48:6: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   46 |     }
   47 |     v.add(bar(0)) // call method
   48 |     v.f(bar(0)) // call fn field
      |         ~~~~~~
   49 | 
   50 |     // array
vlib/v/checker/tests/optional_fn_err.vv:52:9: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   50 |     // array
   51 |     mut arr := [1, 2]
   52 |     arr << bar(0)
      |            ~~~~~~
   53 |     // init
   54 |     _ := [bar(0)]
vlib/v/checker/tests/optional_fn_err.vv:54:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   52 |     arr << bar(0)
   53 |     // init
   54 |     _ := [bar(0)]
      |           ~~~~~~
   55 |     _ := []int{init: bar(0)}
   56 |     _ := [bar(0)]!
vlib/v/checker/tests/optional_fn_err.vv:55:19: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   53 |     // init
   54 |     _ := [bar(0)]
   55 |     _ := []int{init: bar(0)}
      |                      ~~~~~~
   56 |     _ := [bar(0)]!
   57 |     _ := [1]int{init: bar(0)}
vlib/v/checker/tests/optional_fn_err.vv:56:8: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   54 |     _ := [bar(0)]
   55 |     _ := []int{init: bar(0)}
   56 |     _ := [bar(0)]!
      |           ~~~~~~
   57 |     _ := [1]int{init: bar(0)}
   58 |     // index
vlib/v/checker/tests/optional_fn_err.vv:59:13: error: cannot use optional as index (array type `[]int`)
   57 |     _ := [1]int{init: bar(0)}
   58 |     // index
   59 |     println(arr[bar(0)])
      |                ~~~~~~~~
   60 |     // array builtin methods
   61 |     arr.insert(0, bar(0))
vlib/v/checker/tests/optional_fn_err.vv:61:16: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   59 |     println(arr[bar(0)])
   60 |     // array builtin methods
   61 |     arr.insert(0, bar(0))
      |                   ~~~~~~
   62 |     arr.prepend(bar(0))
   63 |     arr.contains(bar(0))
vlib/v/checker/tests/optional_fn_err.vv:62:14: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   60 |     // array builtin methods
   61 |     arr.insert(0, bar(0))
   62 |     arr.prepend(bar(0))
      |                 ~~~~~~
   63 |     arr.contains(bar(0))
   64 |     arr.index(bar(0))
vlib/v/checker/tests/optional_fn_err.vv:63:15: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   61 |     arr.insert(0, bar(0))
   62 |     arr.prepend(bar(0))
   63 |     arr.contains(bar(0))
      |                  ~~~~~~
   64 |     arr.index(bar(0))
   65 |     println(arr.map(bar(0)))
vlib/v/checker/tests/optional_fn_err.vv:64:12: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   62 |     arr.prepend(bar(0))
   63 |     arr.contains(bar(0))
   64 |     arr.index(bar(0))
      |               ~~~~~~
   65 |     println(arr.map(bar(0)))
   66 |     println(arr.filter(bar(true)))
vlib/v/checker/tests/optional_fn_err.vv:65:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   63 |     arr.contains(bar(0))
   64 |     arr.index(bar(0))
   65 |     println(arr.map(bar(0)))
      |                     ~~~~~~
   66 |     println(arr.filter(bar(true)))
   67 |     println(arr.any(bar(true)))
vlib/v/checker/tests/optional_fn_err.vv:66:21: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   64 |     arr.index(bar(0))
   65 |     println(arr.map(bar(0)))
   66 |     println(arr.filter(bar(true)))
      |                        ~~~~~~~~~
   67 |     println(arr.any(bar(true)))
   68 |     println(arr.all(bar(true)))
vlib/v/checker/tests/optional_fn_err.vv:67:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   65 |     println(arr.map(bar(0)))
   66 |     println(arr.filter(bar(true)))
   67 |     println(arr.any(bar(true)))
      |                     ~~~~~~~~~
   68 |     println(arr.all(bar(true)))
   69 | }
vlib/v/checker/tests/optional_fn_err.vv:68:18: error: bar() returns an option, so it should have either an `or {}` block, or `?` at the end
   66 |     println(arr.filter(bar(true)))
   67 |     println(arr.any(bar(true)))
   68 |     println(arr.all(bar(true)))
      |                     ~~~~~~~~~
   69 | }
